// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`composition as should render correctly 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-0 {
  border-left: 4px solid #ccc;
  padding: 1rem;
}

<p
  class="emotion-0 emotion-1 emotion-2"
>
  Hello world
</p>
`;

exports[`composition hook should return with Blockquote props 1`] = `
Object {
  "className": "css-5a25un css-1hq7qsz css-1j9m13w",
}
`;

exports[`composition render props should render correctly 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-0 {
  border-left: 4px solid #ccc;
  padding: 1rem;
}

<div
  class="emotion-0 emotion-1 emotion-2"
>
  Hello world
</div>
`;

exports[`props should render correctly 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-0 {
  border-left: 4px solid #ccc;
  padding: 1rem;
}

<blockquote
  class="emotion-0 emotion-1 emotion-2"
>
  Hello world
</blockquote>
`;

exports[`props should render correctly with CSS props 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-0 {
  border-left: 4px solid #ccc;
  padding: 1rem;
}

.emotion-2.emotion-2 {
  border-color: #444bc9;
}

<blockquote
  class="emotion-0 emotion-1 emotion-2"
>
  Hello world
</blockquote>
`;

exports[`theming Blockquote.base should render correctly 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-0 {
  border-left: 4px solid #ccc;
  padding: 1rem;
}

.emotion-0 {
  background-color: red;
}

<blockquote
  class="emotion-0 emotion-1 emotion-2"
>
  hello world
</blockquote>
`;
